--- a/style.css
+++ b/style.css
@@ -1,1 +1,86 @@
-
+*{ 
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+body{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    background-color: gray;
+}
+.popup{
+    flex: 1,1,auto;
+    display: flex;
+    margin-top: 300px;
+    margin-bottom: 300px;
+    margin-left: 200px;
+    margin-right: 200px;
+    background-color:white;
+    justify-content: space-between;
+    gap: 10px;
+    border-radius: 25px;
+    box-shadow:black;
+    padding:5px ;
+    }
+.alertarea{
+    margin-left: 10px;
+}
+.alerticon{
+    flex: 1,1,auto;
+    background-color:#eeeeee;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    font-weight: 700;
+    color: royalblue;
+    font-size: 20px;
+    line-height: 30px;
+}
+.textarea{
+    display: flex;
+    flex-direction:column;
+    gap: 10px;
+}
+.text{
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+}
+.title{
+    font-size: large;
+    font-weight: 700;
+}
+.xicon{
+    margin-right:10px;
+    line-height: 20px;
+    background-color: #eeeeee;
+    border-radius: 50%;
+    height: 20px;
+    width: 20px;
+    text-align: center;
+    font-size: larger;
+    color: gray;
+}
+.continue{
+    border: none;
+    padding-top: 8px ;
+    padding-bottom: 8px;
+    padding-right: 16px;
+    padding-left: 16px;
+    border-radius: 10px;
+    text-align: center;
+    background-color:royalblue;
+    color: white;
+}
+.cancel{
+    border: none;
+    padding-top: 8px ;
+    padding-bottom: 8px;
+    padding-right: 16px;
+    padding-left: 16px;
+    border-radius: 10px;
+    text-align: center;
+    border: solid 1px #888;
+    background-color: white;
+    color: royalblue;
+}
